tests/ui/const-generics/type-relative-path-144547.min.stderr
error: generic parameters may not be used in const operations
  --> $DIR/type-relative-path-144547.rs:39:35
   |
LL |     type SupportedArray<T> = [T; <Self::InfoType as LevelInfo>::SUPPORTED_SLOTS];
   |                                   ^^^^^^^^^^^^^^
   |
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions
   = help: alternatively, you can use `#![feature(generic_const_args)]` and extract the expression into a `type const` item

error: aborting due to 1 previous error

